# calgo

./: CMakeLists.txt  README.md
doubly_linked_list/: CMakeLists.txt  doubly_linked_list.c  doubly_linked_list.h
queue/: CMakeLists.txt  queue.h
search/: CMakeLists.txt  search.c  search.h
sort/: CMakeLists.txt  sort.c  sort.h
test/: CMakeLists.txt  main.c
